--- a/organicledger/src/main/resources/application-postgres-dev.properties
+++ b/organicledger/src/main/resources/application-postgres-dev.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/organicledgerdb
-spring.datasource.username=postgres
-spring.datasource.password=Plokij123321
+spring.datasource.url=jdbc:postgresql://54.254.150.249:5432/organicledgerdb
+spring.datasource.username=itscdev
+spring.datasource.password=itscdevPassWord
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
