--- a/organicledger/src/main/resources/application.properties
+++ b/organicledger/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev,postgres-local
+spring.profiles.active=dev,postgres-dev
 
 logging.level.org.springframework.security.oauth2=info
 
