--- a/organicledger/src/main/resources/application-default.properties
+++ b/organicledger/src/main/resources/application-default.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/organicledgerdb
 spring.datasource.username=postgres
 spring.datasource.password=Plokij123321
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
